# travelhack

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
_docker/backend/: Dockerfile
_docker/frontend/: Dockerfile
backend/app/: app.py
backend/app/dependencies/: __init__.py  data.py  df.py  filters.py  ml.py
backend/app/routers/: filters.py  recommender.py  router_default.py
backend/app/schemas/: filters.py
backend/data/: big_mac_index.csv  descriptions_mapping.pkl  zp_by_city.csv
frontend/: .eslintrc.json  Makefile  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: FilterPanel.js  FilterRow.js  Maps.js  SlideMenu.js  TourCard.js
frontend/src/components/FilterPanel/: FilterPanel.js
frontend/src/components/System/: ErrorWindow.js  Header.js  ModalBox.js
frontend/src/model/: FilterModel.js  TourModel.js  UserModel.js
frontend/src/pages/HomePage/: HomePage.js
frontend/src/services/: MyError.js  NetworkService.js  RequestService.js
frontend/src/services/common/: constDictionary.js
frontend/src/stores/: FilterStore.js  RecommendationStore.js
frontend/src/styles/: GuestPage.scss  card.scss  index.scss
frontend/src/styles/fonts/: fonts.scss
notebooks/: 0. preprocessing.ipynb  pandas-profile-data-sample.html  start.ipynb
scripts/: fit_models.py  prepare_data.py
