[tool.poetry]
name = "travelhack"
version = "0.1.0"
description = ""
authors = ["Arseny Egorov <egoroff-ars@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
autoflake = "^1.4"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
