[tool.poetry]
name = "travelhack"
version = "0.1.0"
description = ""
authors = ["Arseny Egorov <egoroff-ars@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
numpy = "^1.20.1"
pandas = "^1.2.3"
tqdm = "^4.59.0"
scipy = "1.6.1"
openpyxl = "^3.0.7"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
autoflake = "^1.4"
pre-commit = "^2.11.1"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
matplotlib = "^3.4.0"
seaborn = "^0.11.1"
pandas-profiling = {extras = ["notebook"], version = "^2.11.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
